@@ -1,4 +1,4 @@
-\name{psum/pprod/pmean/pall/pany}
+\name{parallel-funs}
 \alias{psum}
 \alias{pprod}
 \alias{pall}
@@ -10,10 +10,13 @@
 \alias{pmean}
 \alias{pcount}
 \alias{pcountNA}
-\title{ Sum, Product, Mean and more}
+\alias{pfirst}
+\alias{plast}
+\title{Parallel Statistical Functions}
 \description{
-Similar to \code{pmin} and \code{pmax} but for sum, product and mean. Only works for integer, double and complex types. These functions do not recycle vectors. \code{pany} and \code{pall} are derived from base functions \code{all} and \code{any}. Note that \code{pmean} only works with integer and double types.
-Finally \code{pcountNA} is equivalent to \code{pcount} with the argument \code{value} set to \code{NA} and they both allow \code{NA} counting in the case of mixed data type.
+Similar to \code{pmin} and \code{pmax} but for sum, product, mean, first and last non-missing value, and for logical evaluations and counting. Only works for integer, double and complex types. 
+These functions do not recycle vectors. \code{pany} and \code{pall} are derived from base functions \code{all} and \code{any}. Note that \code{pmean} only works with integer and double types.
+\code{pcountNA} is equivalent to \code{pcount} with the argument \code{value} set to \code{NA} and they both allow \code{NA} counting in the case of mixed data types. \code{pfirst} and \code{plast} find the first non-missing value or non-empty element of lists. 
 }
 \usage{
   psum(..., na.rm=FALSE)
@@ -27,9 +30,11 @@ Finally \code{pcountNA} is equivalent to \code{pcount} with the argument \code{v
   pmean(..., na.rm=FALSE)
   pcount(..., value)
   pcountNA(...)
+  pfirst(...)
+  plast(...)
 }
 \arguments{
-  \item{...}{ Numeric arguments of type integer, double complex. Logical vector for \code{pall} and \code{pany}. Functions \code{pall}, \code{pany},\code{pmean},\code{pprod} and \code{psum} also accept a single \code{data.frame} made of the previous types. See example 7 below.}
+  \item{...}{ Numeric arguments of type integer, double complex, logical vector for \code{pall} and \code{pany}, or any types for \code{pcountNA}, \code{pfirst}, \code{plast}. Alternatively these functions also accept a single \code{data.frame}. See example 7 below.}
   \item{na.rm}{ A logical indicating whether missing values should be removed. Default value is \code{FALSE}.}
   \item{value}{ A non \code{NULL} value of length 1. \code{pcount} will count how many times it occurs.}
 }
